--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Document</title>
 </head>
 <body>
+
+    <div id="numbers">a</div>
+    <div id="numbers found"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
