--- a/index.html
+++ b/index.html
@@ -3,13 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
+    <button id="stampa">stampa numeri</button>
+    <div id="numbers"></div>
+    <div id="numbers-found"></div>
+    
+    
+    <input type="text" id="1" class="d-none">
+    <input type="text" id="2" class="d-none">
+    <input type="text" id="3" class="d-none">
+    <input type="text" id="4" class="d-none">
+    <input type="text" id="5" class="d-none">
 
-    <div id="numbers">a</div>
-    <div id="numbers found"></div>
+    <button id="conferma">conferma</button>
 
     <script src="script.js"></script>
 </body>
